# R-Type

./: .gitignore  .gitmodules  CMakeLists (1).txt  INSTALL.md  Makefile  README.md  build_project.sh  main.cpp
.github/workflows/: build_release_tag.yml  check_build.yml  compil_testing.yml  test.yml
Client/: CMakeLists.txt
ECSdemo/src/: Pong.cpp  Pong.hpp
Server/: CMakeLists.txt
client/: CMakeLists.txt  Makefile  build.ps1  build.sh  main.cpp  r-type_client.desktop
client/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
client/src/: Core.cpp  Core.hpp  Game.hpp  Utils.hpp  main.cpp
client/src/ECS/: Registry.hpp
client/src/ECS/Components/: AnimationOneTimeComponent.hpp  ButtonComponent.hpp  Components.hpp  RectangleShapeComponent.hpp  SoundComponent.hpp  SpriteComponent.hpp  TextureRectComponent.hpp
client/src/ECS/Systems/: AnimationOneTimeSystem.hpp  ControllableSystem.hpp  DrawSystem.hpp  ParallaxSystem.hpp  PositionSystem.hpp  ScaleSystem.hpp  SoundSystem.hpp  Systems.hpp
client/src/Error/: MyError.cpp  MyError.hpp
client/src/Game/: EntitiesFactory.cpp  EntitiesFactory.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.cpp  EventManager.hpp  Factory.cpp  Factory.hpp  Fbr.hpp  Game.cpp  Game.hpp  Parallax.cpp  Parallax.hpp  Player.cpp  Player.hpp
client/src/Game/Components/: EntityAnimation.cpp  EntityAnimation.hpp  EventManager.cpp  EventManager.hpp  Parallax.cpp  Parallax.hpp
client/src/Game/ECS/: Registry.hpp  StorageComponents.hpp
client/src/Game/ECS/Components/: Components.hpp  ControllableComponent.hpp  MovableComponent.hpp  ParallaxComponent.hpp  SpriteComponent.hpp  TextureRectComponent.hpp  VelocityComponent.hpp
client/src/Game/ECS/Entities/: Entities.hpp  Missile.cpp  Missile.hpp  Parallax.cpp  Parallax.hpp  Player.cpp  Player.hpp
client/src/Game/ECS/Loader/: Loader.cpp  Loader.hpp
client/src/Game/ECS/Systems/: AnimationSystem.hpp  ControllableSystem.hpp  DrawSystem.hpp  MovableSystem.hpp  ParallaxSystem.hpp  PositionSystem.hpp  Systems.hpp
client/src/Game/Entity/: Monster.cpp  Monster.hpp  Player.cpp  Player.hpp  Rocket.cpp  Rocket.hpp
client/src/Game/EntityManager/: EntityManager.cpp  EntityManager.hpp  MenuManager.cpp  MenuManager.hpp
client/src/Game/Loader/: Loader.cpp  Loader.hpp
client/src/Network/: Instruction.hpp  Network.cpp  Network.hpp  Stream.cpp  Stream.hpp
client/src/Utils/: MyError.cpp  MyError.hpp
client1/: CMakeLists.txt
client2/: CMakeLists.txt  Makefile
client2/src/: Core.cpp  main.cpp
client2/src/Error/: MyError.cpp
client2/src/Game/: EventManager.cpp  Game.hpp
client2/src/Game/ECS/: StorageComponents.hpp
client2/src/Game/ECS/Components/: PositionComponent.hpp  SpriteComponent.hpp  TextureRectComponent.hpp
client2/src/Game/ECS/Entities/: Parallax.cpp  Parallax.hpp  Player.cpp
client2/src/Game/ECS/Systems/: ControllableSystem.hpp  DrawSystem.hpp  ParallaxSystem.hpp
docs/: RFC-10000.txt
server/: CMakeLists.txt  Makefile  build.ps1  build.sh
server/src/: Client.cpp  Client.hpp  Main.cpp  Router.cpp  Router.hpp
server/src/Game/: Entity.cpp  Entity.hpp  ForcePod.cpp  ForcePod.hpp  Game.cpp  Game.hpp  Levels.cpp  Levels.hpp  Missiles.cpp  Missiles.hpp  Player.cpp  Player.hpp  Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp
server/src/Game/Entities/: ArmedEntity.cpp  ArmedEntity.hpp  Bomb.hpp  Entity.cpp  Entity.hpp  Laser.cpp  Laser.hpp  Missile.cpp  Missile.hpp  Player.cpp  Player.hpp  Ray.hpp
server/src/Game/Entities/Bonus/: Bonus.hpp  BonusBox.cpp  BonusBox.hpp  MissileBonus.cpp  MissileBonus.hpp
server/src/Game/Entities/Monsters/: Boss1.cpp  Boss1.hpp  Boss2.cpp  Boss3.cpp  Boss4.cpp  Boss5.cpp  Boss6.cpp  Boss6.hpp  Boss7.cpp  Boss8.cpp  Boss8.hpp  BurstFire.cpp  Follower.cpp  Follower.hpp  Little.cpp  Little.hpp  Zigzager.cpp  Zigzager.hpp
server/src/Game/Monsters/: Little.cpp  Little.hpp  Monster.cpp  Monster.hpp
server/src/Reader/: Reader.cpp  Reader.hpp
server/src/Utils/: Args.cpp  Args.hpp  BoundingBox.hpp  Instruction.hpp  MyError.hpp  Packet.hpp  Queue.hpp  Scheduling.hpp  Stream.cpp  Stream.hpp  ThreadPool.cpp  ThreadPool.hpp
server/src/Writer/: Packet.cpp  Writer.cpp  Writer.hpp
server/stages/: stage1.script  stage2.script  stage3.script  stage4.script  stage5.script  stage6.script  stage7.script  stage8.script
server2/: CMakeLists.txt  Makefile
server2/src/: Client.hpp  Main.cpp
server2/src/Game/: Game.cpp  Missiles.cpp  Player.hpp  Room.cpp
server2/src/Reader/: Reader.hpp
server2/src/Utils/: Instruction.hpp  ThreadPool.cpp  ThreadPool.hpp
